# CAN

./: __init__.py  config.yaml  dataset OG.py  dataset new.py  dataset.py  pyproject.toml  train.py
checkpoints/CAN_2023-07-29-16-13_decoder-AttDecoder/: CAN_2023-07-29-16-13_decoder-AttDecoder.yaml
datasets/: dictionary.txt
logs/CAN_2023-07-27-14-09_decoder-AttDecoder/: events.out.tfevents.1690492199.DaPC
logs/CAN_2023-07-27-14-55_decoder-AttDecoder/: events.out.tfevents.1690494955.DaPC
logs/CAN_2023-07-31-15-59_decoder-AttDecoder/: events.out.tfevents.1690844397.DaPC
models/: can.py
