[tool.poetry]
name = "can"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pytorch-lightning = "^1.3.5"
torch = { version = "=1.7.0+cu110", source = "pytorch"}
torchvision = { version = "=0.8.1+cu110", source = "pytorch" }
einops = "^0.3.0"
editdistance = "^0.5.3"
jsonargparse = "^3.9.0"
flake8 = "^3.9.0"
black = "^20.8b1"
isort = "^5.8.0"
jupyter = "^1.0.0"
pillow = "^8.4.0"
docstring_parser = "^0.13"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu110/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
