[tool.poetry]
name = "can"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7"
torch = { version = "=1.7.0+cu110", source = "pytorch"}
torchvision = { version = "=0.8.1+cu110", source = "pytorch" }
jsonargparse = "^3.9.0"
pillow = "^8.4.0"
tensorboardx = "^2.6.1"
opencv-python = "^4.8.0.74"
matplotlib = "3.5.2"
thop = "^0.1.1.post2209072238"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu110/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
